--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="task2.html">Abonelikler</a></li>
+            <li><a href="team.html">Ekibimiz</a></li>
         </ul>
     </nav>
 
@@ -47,4 +48,5 @@
     </main>
 
 </body>
+
 </html>
