--- a/task2.html
+++ b/task2.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <nav class="navbar">
+        <div class="logo">KAHVE DİYARI</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Ana Sayfaya Dön</a></li>
+        </ul>
+    </nav>
+
     <div class="main-container">
 
         <header class="page-header">
@@ -91,9 +98,7 @@
                 </div>
             </div>
 
-        </div> <div class="back-link">
-            <a href="index.html">← Ana Sayfaya Dön</a>
-        </div>
+        </div> 
 
     </div> </body>
 </html>
