--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <h1>Güne Sıcak Bir Mola</h1>
                 <p>Taze kahveler, tatlı eşlikler ve keyifli anlar...</p>
                 <a href="task2.html" class="btn-main">Paket Fiyatlarını Gör</a>
+                <br>
+                <a href="teklif.html" class="btn-secondary">Teklif Hesapla</a>
             </div>
             <div class="hero-img">
                 <img src="kahveresmi.jpeg" alt="Kahve Diyarı">
@@ -50,3 +52,4 @@
 </body>
 
 </html>
+
