--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
                 <p>Yazılım Uzmanı</p>
                 <div class="card-info">
                    <p>"Sitemizin mimarı! Kahve Diyarı'nın dijital yüzü ona emanet."</p>
-                   <img src="sertifika.png" class="mini-cert" alt="Sertifika">
+                   <img src="sertifika.png" class="cert-overlay" alt="Sertifika">
                 </div>
             </div>
 
@@ -50,4 +50,5 @@
         </div>
     </main>
 </body>
+
 </html>
