--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="team-card user-card">
+            <div class="team-card">
                 <img src="ikbal.jpeg" alt="İkbal">
                 <h3>İkbal Sena Kavgacı</h3>
                 <p>Yazılım Uzmanı</p>
@@ -52,3 +52,4 @@
 </body>
 
 </html>
+
