--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="task2.html">Abonelikler</a></li>
             <li><a href="team.html">Ekibimiz</a></li>
+            
+            <div class="dark-mode-toggle" id="mode-toggle">
+        <div class="toggle-ball">
+            <span id="toggle-icon">☀️</span>
+        </div>
+    </div>
         </ul>
     </nav>
 
@@ -48,8 +54,35 @@
     </div>
 </section>
     </main>
+    <script>
+   const toggleBtn = document.getElementById('mode-toggle');
+   const toggleIcon = document.getElementById('toggle-icon');
+   const bodyEl = document.body;
+
+   // 1. Sayfa açıldığında hafızaya bak: "Kullanıcı en son neyi seçmişti?"
+   const savedMode = localStorage.getItem('kahve-tema');
+
+   if (savedMode === 'dark') {
+       bodyEl.classList.add('dark-mode');
+       toggleIcon.innerText = '🌙'; // Ay ikonunu koy
+    }
+
+   // 2. Butona basıldığında olacaklar
+   toggleBtn.addEventListener('click', () => {
+       bodyEl.classList.toggle('dark-mode');
+    
+       if (bodyEl.classList.contains('dark-mode')) {
+           localStorage.setItem('kahve-tema', 'dark'); // Hafızaya "dark" diye kaydet
+           toggleIcon.innerText = '🌙';
+        } else {
+           localStorage.setItem('kahve-tema', 'light'); // Hafızaya "light" diye kaydet
+           toggleIcon.innerText = '☀️';
+        }
+   });
+   </script>
 
 </body>
 
 </html>
+
 
