--- a/team.html
+++ b/team.html
@@ -10,6 +10,12 @@
         <div class="logo">KAHVE DİYARI</div>
         <ul class="nav-links">
             <li><a href="index.html">Ana Sayfaya Dön</a></li>
+
+            <div class="dark-mode-toggle" id="mode-toggle" onclick="temaDegistir()">
+    <div class="toggle-ball">
+        <span id="toggle-icon">☀️</span>
+    </div>
+</div>  
         </ul>
     </nav>
 
@@ -49,7 +55,9 @@
             </div>
         </div>
     </main>
+    <script src="theme.js"></script>
 </body>
 
 </html>
+
 
