--- a/task2.html
+++ b/task2.html
@@ -12,6 +12,12 @@
         <div class="logo">KAHVE DİYARI</div>
         <ul class="nav-links">
             <li><a href="index.html">Ana Sayfaya Dön</a></li>
+
+            <div class="dark-mode-toggle" id="mode-toggle" onclick="temaDegistir()">
+    <div class="toggle-ball">
+        <span id="toggle-icon">☀️</span>
+    </div>
+</div>  
         </ul>
     </nav>
 
@@ -100,5 +106,8 @@
 
         </div> 
 
-    </div> </body>
+    </div>
+    <script src="theme.js"></script>
+</body>
 </html>
+
