--- a/teklif.html
+++ b/teklif.html
@@ -10,6 +10,11 @@
         <div class="logo">KAHVE DİYARI</div>
         <ul class="nav-links">
             <li><a href="index.html">Ana Sayfaya Dön</a></li>
+            <div class="dark-mode-toggle" id="mode-toggle" onclick="temaDegistir()">
+    <div class="toggle-ball">
+        <span id="toggle-icon">☀️</span>
+    </div>
+</div>  
         </ul>
     </nav>
 
@@ -70,5 +75,7 @@
             document.getElementById('sonucFiyat').innerText = toplam;
         }
     </script>
+    <script src="theme.js"></script>
 </body>
+
 </html>
