--- a/teklif.html
+++ b/teklif.html
@@ -43,7 +43,7 @@
             <button id="btnHesapla" onclick="toplamTutarHesapla()">Hesapla</button>
 
             <div class="result-box">
-                <h3>Tahmini Tutar: <span id="sonucFiyat">400</span> TL</h3>
+                <h3>Tutar: <span id="sonucFiyat">400</span> TL</h3>
             </div>
         </div>
     </main>
@@ -79,3 +79,4 @@
 </body>
 
 </html>
+
